# thunes

./: .gitignore  Cargo.toml  README.md  cliff.toml
.github/workflows/: ci.yaml  release.yaml  tests.yaml
cli/: Cargo.toml
cli/bindings/: Account.ts  AccountIdentifiers.ts  AccountWithBalance.ts  AddAccountOptions.ts  AddTransactionOptions.ts  AddTransactionTransferOptions.ts  Allocation.ts  AllocationGroup.ts  BalanceOptions.ts  Budget.ts  BudgetCategory.ts  BudgetIdentifiers.ts  BudgetTile.ts  BudgetTileType.ts  Category.ts  CategoryWithId.ts  CreateAllocationOptions.ts  CreatePartitionOptions.ts  CreateSplitBudgetOptions.ts  Currency.ts  CurrencyBalance.ts  CurrencyTile.ts  CurrencyTileType.ts  Data.ts  Data2.ts  ExpensesAllocation.ts  ExpensesBudget.ts  ExpensesPartition.ts  ExpensesPeriod.ts  GetTransactionOptions.ts  Icon.ts  Inner.ts  Item.ts  Partition.ts  PortfolioTile.ts  ReadCategoryOptions.ts  ReadCategoryResult.ts  ReadCurrencyOptions.ts  ReadExpensesOptions.ts  ReadExpensesResult.ts  (+14 more)
cli/examples/budget-planner/: README.md
cli/examples/budget-planner/accounts/: main
cli/examples/crypto/accounts/: BTC
cli/examples/crypto/scripts/: bitcoin.rhai
cli/src/: account.rs  budget.rs  category.rs  currency.rs  lib.rs  main.rs  migrations.rs  portfolio.rs  script.rs  settings.rs  transaction.rs
cli/src/budget/: allocation.rs  category.rs  expenses.rs  partition.rs
cli/src/migrations/: m1_account_filter.rs
cli/src/migrations/m1/: down.surql  up.surql
cli/src/portfolio/: budget.rs  currency.rs  tile.rs
cli/src/transaction/: category.rs  tag.rs
demo/: demo.surql
desktop/: eslint.config.js  index.html  package.json  vite.config.ts
desktop/src/: App.tsx  Themes.ts  main.tsx  utils.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: default_categories.rs  lib.rs  main.rs
desktop/src-tauri/src/commands/: account.rs  budget.rs  categories.rs  currency.rs  portfolio.rs  settings.rs  tags.rs  transaction.rs
desktop/src-tauri/tests/: account.rs  budget.rs  currency.rs
desktop/src-tauri/tests/budget/: category.rs
desktop/src-tauri/tests/common/: mod.rs
desktop/src/api/: index.ts
desktop/src/components/: ChipCategoryPicker.tsx  ChipDatePicker.tsx  ListItemTransaction.tsx  ListTransactions.tsx
desktop/src/components/form/: AccountAutocomplete.tsx  BudgetSelector.tsx  CategorySelector.tsx  CurrencySelector.tsx  CustomSelector.tsx  PartitionSelector.tsx  TransactionAutocomplete.tsx
desktop/src/components/layout/: SideMenu.tsx
desktop/src/contexts/: Account.tsx  Budget.tsx  Route.tsx  Settings.tsx  Snackbar.tsx
desktop/src/hooks/: accounts.tsx  budget.tsx
desktop/src/pages/: Account.tsx  Budget.tsx  Currency.tsx  Dashboard.tsx  Page.tsx  Portfolio.tsx  Settings.tsx
desktop/src/pages/account/: Details.tsx  Settings.tsx  Summary.tsx  Tags.tsx  Transactions.tsx
desktop/src/pages/budget/: Allocation.tsx  AllocationBar.tsx  Partition.tsx  Pie.tsx  Settings.tsx
desktop/src/pages/portfolio/: Accounts.tsx  Budgets.tsx
desktop/src/reducers/: Settings.tsx
desktop/src/stores/: account.tsx  accounts.tsx  budget.tsx  category.tsx  setting.tsx  tiles.tsx  transaction.tsx
desktop/src/utils/: icons.tsx
docker/: desktop.Dockerfile  docker-compose.yaml
examples/Crypto/: README.md
examples/Crypto/scripts/: bitcoin.rhai
examples/budget-planner/: README.md
examples/budget-planner/scripts/: budget-planner.rhai
scripts/: bitcoin.rhai
src/: App.tsx  account.rs  charts.rs  errors.rs  lib.rs  main.rs  operations.rs  script.rs  transaction.rs
src-tauri/: Cargo.toml
src-tauri/src/: account.rs  lib.rs  main.rs  script.rs
src/accounts/: account.rs  entry.rs  mod.rs  record.rs
src/args/: arg.rs  dispatch.rs  mod.rs  setup.rs
src/balance/: show.rs
src/components/layout/: SideMenu.tsx
src/currency/: show.rs
src/list/: items.rs
src/new/: account.rs  account.rs~  items.rs  mod.rs  mod.rs~
src/reducers/: Route.tsx
src/remove/: items.rs  mod.rs
src/rename/: account.rs
src/utils/: error.rs  helpers.rs  mod.rs
tunes/: package.json
tunes/src/: App.tsx  main.tsx
tunes/src-tauri/: Cargo.toml
tunes/src/components/layout/: Menu.tsx  SideMenu.tsx
tunes/src/pages/: Account.tsx  Dashboard.tsx
