[package]
name = "accountscli"
version = "0.4.2"
authors = ["ltabis <tab.rysak70@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0" 
serde = { version = "1.0.114", features = ["derive"] }
chrono = "0.4"
prettytable-rs = "^0.8.0"