[package]
name = "accounting"
version = "0.1.0"
authors = ["ltabis <ltabis.pro@gmail.com>"]
edition = "2021"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }
time = { version = "0.3", features = ["parsing", "formatting"] }
time-macros = { version = "0.2", features = ["parsing"] }
charts = "0.3"
