[package]
name = "accounts-cli"
version = "0.0.0"
authors = ["ltabis <ltabis.pro@gmail.com>"]
edition = "2021"
description = "A cli to register and analyze monetary transactions"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }
time = { version = "0.3", features = ["std", "parsing", "formatting", "serde"] }
time-macros = { version = "0.2", features = ["parsing"] }
charts = "0.3"
rhai-http = { git = "https://github.com/ltabis/rhai-http", rev = "1aa662b" }
rhai = { version = "1.18" }
