[package]
name = "tunes-cli"
version = "0.1.0"
authors = ["ltabis <ltabis.pro@gmail.com>"]
edition = "2021"
description = "A cli to register and analyze monetary transactions"
license-file = "../LICENSE"
documentation = "https://docs.rs/"
homepage = "https://github.com/ltabis/accounts-cli"
repository = "https://github.com/ltabis/accounts-cli"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
clap = { version = "4.5.29", features = ["derive"] }
time = { version = "0.3.37", features = [
    "std",
    "parsing",
    "formatting",
    "serde",
] }
time-macros = { version = "0.2.19", features = ["parsing"] }
rhai-http = { version = "0.3.0" }
rhai = { version = "1.20.1" }
ts-rs = { version = "10.1.0", features = ["serde-json-impl"] }
surrealdb = { version = "2.2.0", features = ["kv-rocksdb"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
