[package]
name = "thunes-cli"
version = "0.1.0"
authors = ["ltabis <ltabis.pro@gmail.com>"]
edition = "2021"
description = "A cli to register and analyze monetary transactions"
license-file = "../LICENSE"
documentation = "https://docs.rs/"
homepage = "https://github.com/ltabis/accounts-cli"
repository = "https://github.com/ltabis/accounts-cli"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
time = { version = "0.3.41", features = [
    "std",
    "parsing",
    "formatting",
    "serde",
] }
time-macros = { version = "0.2.22", features = ["parsing"] }
rhai-http = { version = "0.4.0" }
rhai = { version = "1.21.0" }
ts-rs = { version = "10.1.0", features = ["serde-json-impl"] }
surrealdb = { version = "2.2.1", features = ["kv-rocksdb"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.40" }
