[package]
name = "thunes-cli"
version = "0.3.0"
authors = ["ltabis <ltabis.pro@gmail.com>"]
edition = "2021"
description = "A cli to register and analyze monetary transactions"
license-file = "../LICENSE"
documentation = "https://docs.rs/"
homepage = "https://github.com/ltabis/accounts-cli"
repository = "https://github.com/ltabis/accounts-cli"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.141" }
time = { version = "0.3.41", features = [
    "std",
    "parsing",
    "formatting",
    "serde",
] }
time-macros = { version = "0.2.22", features = ["parsing"] }
ts-rs = { version = "11.0.1", features = ["serde-json-impl"] }
surrealdb = { version = "2.3.7", features = ["kv-rocksdb"] }
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.41" }
tracing = { version = "0.1.41" }
